--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
   <h2>This is a test file.</h2>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit veniam exercitationem alias debitis, placeat nemo laboriosam cupiditate maiores reiciendis amet iusto nisi nobis sint quo, molestias aut libero atque. Aliquid.</p>
 </body>
 </html>
