--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h2>This is a test file.</h2>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit veniam exercitationem alias debitis, placeat nemo laboriosam cupiditate maiores reiciendis amet iusto nisi nobis sint quo, molestias aut libero atque. Aliquid.</p>
   <form>
-    <input type="email" placeholder="Enter your Email">
+    <input type="email" placeholder="Enter your Email" name="email">
     <input type="submit" value="Subscribe">
   </form>
 </body>
